--- a/Assets/BetterLoop/package.json
+++ b/Assets/BetterLoop/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.tdw.{package_name}",
-  "displayName": "{display_name}",
+  "name": "com.tdw.better.loop",
+  "displayName": "Better Loop",
   "version": "0.0.1",
   "unity": "2021.3",
   "description": " ",
@@ -11,14 +11,15 @@
     "name": "Better Plugins",
     "url": "https://github.com/techno-dwarf-works"
   },
-  "changelogUrl": "https://github.com/techno-dwarf-works/{project_name}",
-  "documentationUrl": "https://github.com/techno-dwarf-works/{project_name}/tree/main#readme",
+  "changelogUrl": "https://github.com/techno-dwarf-works/better-loop",
+  "documentationUrl": "https://github.com/techno-dwarf-works/better-loop/tree/main#readme",
   "license": "MIT",
-  "licensesUrl":"https://github.com/techno-dwarf-works/{project_name}/blob/main/LICENSE",
+  "licensesUrl":"https://github.com/techno-dwarf-works/better-loop/blob/main/LICENSE",
   "keywords": [
-    "keyword1",
-    "keyword2",
-    "keyword2"
+    "player loop",
+    "update",
+    "loop",
+    "scheduling"
   ],
   "samples": [
     {
