--- a/Assets/BetterLoop/Editor/BetterLoop.Editor.asmdef
+++ b/Assets/BetterLoop/Editor/BetterLoop.Editor.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "{project_name}.Editor",
-    "rootNamespace": "Better.{short_project_name}.EditorAddons",
+    "name": "Better.Loop.Editor",
+    "rootNamespace": "Better.Loop.EditorAddons",
     "references": [
         "GUID:443314a5a4e67c14a88ae223776b6554"
     ],
