--- a/Assets/BetterScheduler/Editor/BetterScheduler.Editor.asmdef
+++ b/Assets/BetterScheduler/Editor/BetterScheduler.Editor.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Better.Loop.Editor",
-    "rootNamespace": "Better.Loop.EditorAddons",
+    "name": "Better.Scheduler.Editor",
+    "rootNamespace": "Better.Scheduler.EditorAddons",
     "references": [
         "GUID:443314a5a4e67c14a88ae223776b6554"
     ],
